<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DraftList</string>
    <string name="master_list_label"> Master List</string>
    <string name="label_add">Add</string>
    <string name="label_delete_list">Delete</string>
    <string name="label_undo">Undo</string>
    <string name="label_edit">Edit</string>
    
    <string name="new_list">New List</string>
    <string name="list_title_hint">Enter List Name</string>
    <string name="action_settings">Settings</string>
    <string name="my_lists_label">My Lists</string>
    <string name="list_item_hint">Enter List Item</string>
    <string name="action_search">Search</string> 
    <string name="txtEmpty">Empty</string>
    <string name="image_button_save">Button to save list</string>
    

</resources>
