<?xml version="1.0" encoding="utf-8"?>

<!-- Defines extra namespace because ActionBarActivity uses the support library appcompat_v7. Required to make icon visible (showAsAction)
	 Eclipse auto generates a menu resource w/ additional namespaces when a project is created with an Activity that extends ActionBarActivity  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    
    
    <item
        android:id="@+id/menu_item_accept" 
        android:title="@string/new_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_accept"  
          />
    
    <item
        android:id="@+id/menu_item_delete_list_item"
        android:title="@string/label_delete_list"
        app:showAsAction = "ifRoom"
        android:icon="@drawable/ic_action_discard"
        />
    
    <item
        android:id="@+id/menu_item_undo"
        android:title="@string/label_undo"
        app:showAsAction = "ifRoom"
        android:icon="@drawable/ic_action_undo"
        />
    
    <item
        android:id="@+id/menu_item_edit"
        android:title="@string/label_edit"
        app:showAsAction = "ifRoom"
        android:icon="@drawable/ic_action_edit"
        />
    
    
        	
</menu>
